improve classpath resource search for better Boot support